# pythmata

./: .env.example  .gitignore  .spellcheck.yml  .wordlist.txt  ARCHITECTURE_TODO.md  BPMN_ENGINE_CORE_TDD_PLAN.md  BPMN_ENGINE_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINTING_TODO.md  Makefile  PROCESS_EXECUTION_FEATURES.md  README.md  TDD_FEATURE_IMPLEMENTATION_GUIDE.md  TODO.md  basic_compensation_test.py  direct-download?product=navicat16-premium-en  docker-compose.yml  mkdocs.yml  version-control.md  wget-log
.github/: dependabot.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_variable_definitions.py  003_add_process_status_enum.py  004_add_activity_logs.py  004_add_auth_tables.py  005_add_auth_tables.py  005_add_chat_models.py  006_add_auth_tables.py  007_make_process_definition_id_nullable.py  008_add_version_control.py  008_create_process_versions_table.py  009_add_project_management.py  009_update_process_table.py  010_add_audit_logs.py
backend/scripts/: install_plugin_deps.sh  setup_test_db.py  start.sh
backend/src/pythmata/: __init__.py  main.py
backend/src/pythmata/api/: dependencies.py  routes.py  schemas.py
backend/src/pythmata/core/: auth.py  config.py  database.py  engine.py  events.py  plugin.py  state.py  types.py
backend/src/pythmata/models/: audit.py  base.py  chat.py  process.py  project.py  user.py
backend/src/pythmata/utils/: logger.py
backend/tests/: README.md  __init__.py  conftest.py  test_main.py
backend/tests/api/: test_auth.py  test_llm.py  test_process_definition_delete.py  test_process_definitions.py  test_process_instances.py  test_services.py  test_websocket_chat.py
backend/tests/core/: __init__.py  test_auth.py  test_database.py  test_imports.py  test_state.py
backend/tests/core/bpmn/: test_debug.py  test_element_builder.py  test_parser.py  test_timer_validation.py  test_validator.py
backend/tests/core/common/: test_connections.py
backend/tests/core/dmn/: __init__.py  test_builder.py  test_parser.py  test_validator.py
backend/tests/core/engine/: base.py  test_call_activities.py  test_call_activities_integration.py  test_compensation.py  test_complex_multi_instance.py  test_cyclic_graphs.py  test_error_handling.py  test_exclusive_gateway.py  test_executor.py  test_expressions.py  test_inclusive_gateway.py  test_instance.py  test_multi_instance.py  test_multi_instance_advanced.py  test_parallel_gateway.py  test_process_execution.py  test_process_validation.py  test_saga.py  test_service_executor.py  test_service_task_integration.py  test_subprocess.py  test_subprocess_variables.py  test_token_idempotency.py  test_token_race_conditions.py  test_transaction.py
backend/tests/core/llm/: __init__.py  test_prompts.py  test_service.py  test_streaming.py
backend/tests/core/saga/: base.py
backend/tests/core/services/: test_registry.py
backend/tests/data/: process_samples.py  test_config.toml
backend/tests/fixtures/: compensation_process.bpmn
backend/tests/integration/: test_compensation_process.py
backend/tests/models/: test_chat.py
(+345 files in other folders)
