[tool.poetry]
name = "pythmata"
version = "0.1.0"
description = "A Python-based BPMN workflow engine"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "pythmata", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
redis = "^5.2.1"
aio-pika = "^9.5.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.18"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
xmlschema = "^2.5.1"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"
httpx = ">=0.27.0,<0.28.0"
aisuite = {version = "^0.1.10", extras = ["all"]}
aiohttp = "^3.9.5"
docstring_parser = "^0.16.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.14.1"
pytest-cov = "^4.1.0"
types-toml = "^0.10.8.20240310"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = [
    "tests/.*",  # Exclude test files from strict typing
    "migrations/.*",  # Exclude database migrations
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
